--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^10.16.16",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.20.1",
-    "framer-motion": "^10.16.16",
     "react-intersection-observer": "^9.5.3",
+    "react-router-dom": "^6.20.1",
+    "react-select": "^5.10.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
