--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.20.1",
     "react-select": "^5.10.1",
+    "xlsx": "^0.18.5",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
